# RoboKots

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: __init__.py  inward_optimization_example.py
example/benchmark_example/: main.py
example/cmtm_jacob/: main.py  target_list.json
example/dynamics/: main.py
example/jacob_numerical/: main.py  target_list.json
example/jacobian_compare_example/: main.py
example/jacobian_dof_sweep_example/: main.py
example/kinematics/: main.py
example/kinematics_numerical/: main.py  target_list.json
example/model/: 1dof_arm.json  soft_rod.json
example/optimization_example/: __init__.py  inverse_kinematics.py  liteopt_two_link.py  main.py  project.json  project_ik_task_file.json  project_task_file.json  project_trajectory.json  task.json  task_ik.json  trajectory_optimization.py  trajectory_parameter_optimization.py  two_var_linear.py
example/optimize_example/: main.py
example/polars_example/: main.py  out_state.jsonl
example/robot_file/: main.py  sample_robot.json
example/simple_example/: main.py  target_list.json
example/simple_robot/: main.py
example/soft_link/: main.py  target_list.json
example/target_list_file/: main.py  sample_robot.json  target_list.json
robokots/: __init__.py  backward.py  dynamics.py  forward.py  kinematics.py  kots.py  kots_soft.py  misc.py  motion.py  outward.py  robot.py  robot_drow.py  robot_io.py  robot_model.py  state.py  state_dict.py  target.py  urdf_io.py
robokots/basic/: __init__.py  dynamics.py  kinematics.py  motion.py  robot.py  robot_drow.py  robot_struct.py  state.py  state_df.py  state_dict.py  target.py
robokots/core/: __init__.py  motion.py  robot.py  state.py  state_cache.py  state_df.py  state_dict.py  state_json.py  state_table.py  target.py  time_grid.py
robokots/dynamics/: base.py  dynamics.py  dynamics_matrix.py
robokots/gui/: simple_draw.py
robokots/inward/: __init__.py  builder.py  context.py  opt.py  (+7 more)
robokotz/: __init__.py  robot.py
tests/: pytest.ini  target_list.json  test_dynamics.py  test_dynamics_jacobians.py  test_forward.py  test_io.py  test_kinematics.py  test_kots.py  test_model.py  test_motion.py  test_outward.py  test_robot.py  test_state.py  test_state_dict.py
(+106 files in other folders)
