[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robokots"
version = "0.0.1"
authors = [  
  { name="taiki-ishigaki", email="taiki.ishigaki@ieee.org" },
]
description = "robotics library"
readme = "README.md"

license = {text = "MIT License"}
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.30",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "sympy>=1.14.0",
    "polars>=1.34.0",
    "mathrobo>=0.0.1",
]

[project.optional-dependencies]
test = ["pytest>=8.4.2"]
liteopt =["liteopt>=0.1.6"]

[project.urls]
Homepage = "https://github.com/MathRobotics/RoboKots"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = ["slow: slow tests (numerical differentiation, heavy jacobian checks)"]
